Fix top alignment and change plus icon to favorites

--- a/templates/pixelegg/app.css
+++ b/templates/pixelegg/app.css
@@ -112,6 +112,6 @@ tr.egw_online_true {
   margin-top: 5px;
 }
 .slideIsUp #egw_fw_sidebar_r {
-  top: 57px;
+  top: 88px;
   height: calc(100% - 110px);
 }
